# GitCC

./: .gemini-prompt.md  .gitignore  CLAUDE.md  技术需求.txt
.claude/: settings.local.json
CppMasterClass/: CMakeLists.txt  README.md
CppMasterClass/docs/: 使用说明.md  快速启动指南.md  模块划分说明.md  测试报告.md  详细设计文档.md  软件设计说明.md  项目概要说明.md
CppMasterClass/src/: 01_basics.cpp  02_pointers.cpp  03_oop.cpp  04_templates.cpp  05_stl.cpp  06_memory.cpp  07_concurrency.cpp  08_modern_cpp.cpp  09_design_patterns.cpp  10_real_world.cpp  main.cpp
SmartHMI-Learn/: SmartHMI.sln
SmartHMI-Learn/SmartHMI.Core/: SmartHMI.Core.csproj
SmartHMI-Learn/SmartHMI.Modules/: SmartHMI.Modules.csproj
SmartHMI-Learn/SmartHMI.Services/: AlarmService.cs  LoggingService.cs  SettingsService.cs  SmartHMI.Services.csproj  UserService.cs
SmartHMI-Learn/SmartHMI.Tests/: AlarmServiceTests.cs  DeviceStateMachineTests.cs  EventAggregatorTests.cs  RecipeAndTraceTests.cs  SafetyInterlockTests.cs  SmartHMI.Tests.csproj  UserServiceTests.cs
SmartHMI-Learn/SmartHMI.UI/: App.xaml  App.xaml.cs  Converters.cs  MainWindow.xaml  MainWindow.xaml.cs  SmartHMI.UI.csproj
SmartHMI-Learn/docs/: SmartHMI_Phase3-6_完整设计文档.md  SmartHMI_开发规划_修复与完善.md  SmartHMI_测试报告.md  SmartHMI_第六阶段开发计划.md  SmartHMI_详细设计文档.md  SmartHMI_软件使用说明.md
SmartIndustry.Platform/: SmartIndustry.Platform.sln  smartindustry.db
SmartIndustry.Platform/docs/: 01_架构设计文档.md  (+6 more)
SmartMES -V9.0/: .gitignore  README.md  SmartMES.sln
SmartMES -V9.0/SmartMES.Native/: CMakeLists.txt  SmartMES.Native.cpp  build.ps1
SmartSemiCon/: SmartSemiCon.sln
交互文件/: SmartMES -V9.0交互.md  SmartSemiCon.md
激光干涉仪/: 激光干涉仪数据筛选技术需求.txt
(+516 files in other folders)
